Alteracao do titulo da pagina

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 	<head>
 	</head>
 	<body>
-		<h1>projeto do Rodrigo Carvalho</h1>
+		<h1>projeto do Rodrigo Carvalho & Ana Clara</h1>
 	</body
 </html
